Fix layout issues from form and improve buttons

--- a/resources/styl/components/button.styl
+++ b/resources/styl/components/button.styl
@@ -9,3 +9,9 @@
   line-height 1
   padding $s-size
   text-decoration none
+
+  &--primary
+    background $yellow
+
+  &--full-width
+    width 100%
