--- a/resources/styl/layout/input-group.styl
+++ b/resources/styl/layout/input-group.styl
@@ -10,7 +10,7 @@
 
   &__item
     display flex
-    margin-left 10px
+    margin-bottom 10px
 
     > input
       width 100%
@@ -18,3 +18,6 @@
     &:first-child
       flex-grow 1
       margin-left 0
+
+    @media (min-width $desktop-breakpoint)
+      margin-left 10px
